# valentina

./: .dockerignore  .env  .env.shared  .gitignore  .pre-commit-config.yaml  .typos.toml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  codecov.yml  compose-db.yml  compose.yml  docker-compose.yml  duties.py  entrypoint.sh  pyproject.toml  user_guide.md
.cursor/rules/: all_python_rules.mdc  architecture-principles.mdc  comment-usage.mdc  project-technology-stack.mdc  pytest-test-rules.mdc  python-docstring-rules.mdc  python-naming-conventions.mdc  use-pathlib.mdc
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/: dependabot.yml  labeler.yml
.github/actions/setup-poetry/: action.yml
.github/actions/setup_python_env/: action.yml
.github/actions/uv-python-package/: action.yml
.github/workflows/: automated-tests.yml  commit-linter.yml  create-release.yml  devcontainer-checker.yml  labeler.yml  pr-linter.yml  publish-to-gcr.yml  publish-to-ghcr.yml  publish-to-pypi.yml  pypi-release.yml  reusable-tests.yml  test.yml  update-codecov.yml  upload-coverage.yml
docs/: discord.md  webui.md
scripts/: install_certifi.py
src/the_group/: __init__.py  __version__.py  cli.py
src/the_group/config/: __init__.py  config.py  default_config.toml
src/the_group/utils/: __init__.py  alerts.py
src/valentina/: __init__.py  __version__.py  backup_db.py  bot.py  constants.py  dataclasses.py  debug_webui.py  main.py  progress.md  run.py  typed_dicts.py
src/valentina/character/: __init__.py  add_trait.py  claims.py  create.py  traits.py  view_sheet.py  views.py  wizard.py
src/valentina/characters/: __init__.py  add_from_sheet.py  buttons.py  chargen.py  reallocate_dots.py  spend_experience.py  trait_value_generator.py
src/valentina/cogs/: admin.py  campaign.py  characters.py  chronicle.py  debug.py  developer.py  event_listeners.py  experience.py  gameplay.py  github.py  help.py  info.py  inventory.py  macros.py  misc.py  notes.py  owner.py  reference.py  storyteller.py  xp.py
src/valentina/controllers/: __init__.py  channel_mngr.py  character_sheet_builder.py  experience.py  model_mngr.py  permission_mngr.py  rng_chargen.py  task_broker.py  trait_modifier.py
src/valentina/discord/: __init__.py  bot.py  dataclasses.py
src/valentina/discord/characters/: __init__.py  add_from_sheet.py  buttons.py  chargen.py  reallocate_dots.py  spend_experience.py
src/valentina/discord/cogs/: admin.py  campaign.py  characters.py  developer.py  event_listeners.py  experience.py  gameplay.py  github.py  help.py  inventory.py  macros.py  misc.py  notes.py  reference.py  storyteller.py
src/valentina/discord/models/: __init__.py  channel_mngr.py  webui_hook.py
src/valentina/discord/utils/: __init__.py  autocomplete.py  converters.py  discord_utils.py  perform_roll.py
src/valentina/discord/views/: actions.py  buttons.py  (+8 more)
src/valentina/models/: __init__.py  aws.py  bot.py  broker_task.py  campaign.py  changelog.py  character.py  characters.py  chronicle.py  constants.py  database.py  database_services.py  db_tables.py  dicerolls.py  dictionary.py  discord_bot.py  enums.py  errors.py  guild.py  guilds.py  macros.py  mongo_collections.py  note.py  permission_mngr.py  probability.py  sqlite_models.py  statistics.py  traits.py  user.py  users.py  web_discord_sync.py
src/valentina/scripts/: __init__.py  run_prod.py  run_webui_dev.py
src/valentina/utils/: __init__.py  autocomplete.py  backup_db.py  bot_hooks.py  changelog_parser.py  character_service.py  cogs.py  config.py  console.py  context.py  converters.py  database.py  db_backup.py  db_initialize.py  discord_utils.py  errors.py  helpers.py  logging.py  migrate_db.py  migrate_to_mongo.py  options.py  perform_roll.py  probability.py  rng_trait_values.py  storyteller.py  types.py
src/valentina/views/: __init__.py  actions.py  buttons.py  campaign_viewer.py  character_generation.py  character_sheet.py  chargen.py  chargen_wizard.py  embeds.py  errors.py  modals.py  rating_view.py  roll_display.py  s3_image_review.py  settings.py  thumbnail_review.py
src/valentina/webui/: __init__.py  blueprints.py  config.py  constants.py  web_app.py
tests/: __init__.py  alerts_test.py  cli_test.py  config_test.py  conftest.py  docker-compose.yml  factories.py  helpers.py  test_autocomplete.py  test_aws_service.py  test_campaigns.py  test_character_model.py  test_characters.py  test_chargen.py  test_constants.py  test_converters.py  test_database.py  test_database_service.py  test_dicerolls.py  test_discord_utils.py  test_guild_model.py  test_guilds.py  test_helpers.py  test_macros.py  test_mongo.py  test_probability.py  test_rng_trait_values.py  test_statistics.py  test_trait_service.py  test_user_model.py  test_user_service.py  test_utils.py
tests/cogs/: __init__.py  conftest.py  test_experience_cog.py
tests/controllers/: test_character_sheet_builder.py  test_chargen.py  test_model_mngr.py  test_permissions_mngr.py  test_trait_modifier.py
tests/database/: __init__.py  conftest.py  test_character_service.py  test_database_service.py  test_guild_service.py  test_guilds.py  test_macro_service.py  test_trait_service.py  test_user_service.py
tests/models/: __init__.py  conftest.py  test_aws_service.py  test_changelog.py  test_character.py  test_character_model.py  test_character_service.py  test_characters.py  test_chronicles.py  test_database_service.py  test_db.py  test_dicerolls.py  test_dictionaryterm.py  test_guild_model.py  test_guilds.py  test_macros.py  test_permissions_mngr.py  test_probability.py  test_statistics.py  test_trait_service.py  test_user_model.py  test_user_service.py
tests/mongo/: conftest.py  test_character_model.py  test_chargen.py  test_guild_model.py  test_model_user.py  test_user_model.py
tests/utils/: test_autocomplete.py  test_changelog_parse.py  test_converters.py  test_discord_utils.py  test_helpers.py
tests/webui/: __init__.py  conftest.py  test_blueprints.py  test_helpers.py  test_htmx_others.py  test_htmx_partials.py  test_htmx_sortables.py
(+243 files in other folders)
